--- a/static/404.html
+++ b/static/404.html
@@ -18,7 +18,7 @@
 <p>
   The page should be redirect,
   but if it is not working,
-  please <a id='link' href='/'>click me</a>.
+  please <a id='link' href="/">click me</a>.
 </p>
 <script>
   location.replace(document.getElementById('link').getAttribute('href'))
