--- a/public/404.html
+++ b/public/404.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset='UTF-8'>
-  <title>404 - popcat-active</title>
+  <title>404 - popsenzawa-active</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
   <style>
     html,
